<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SP Kernel Manager</string>
    <string name="action_settings">Send Feedback</string>
    <string name="updateText">Check for Updates</string>
    <string name="placeholderSKU">Your Shield Tablet is the cool version!</string>
    <string name="latestLabel">Latest Version:</string>
    <string name="currentLabel">Current Version:</string>
    <string name="downloadText">Download</string>
    <string name="feed">http://superpichu.org/kernel/update.xml</string>
    <string name="title_activity_cifsmounts">CIFS Mounts</string>
    <string name="cifs_mounts">CIFS Mounts</string>
    <string name="title_activity_add_mount">Add Mount</string>
    <string name="title_activity_edit_mount">Edit Mount</string>

</resources>
