<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/mainView">

    <TextView android:text="@string/placeholderSKU" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skuText"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="false"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/latestLabel"
        android:id="@+id/latestText"
        android:layout_below="@+id/skuText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateText"
        android:id="@+id/updateButton"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:onClick="updateButton"
        android:layout_below="@+id/currentText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downloadText"
        android:id="@+id/downloadButton"
        android:nestedScrollingEnabled="false"
        android:onClick="downloadButton"
        android:layout_below="@+id/updateButton"
        android:layout_alignEnd="@+id/updateButton"
        android:layout_alignStart="@+id/updateButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Install"
        android:id="@+id/installButton"
        android:onClick="installButton"
        android:layout_below="@+id/downloadButton"
        android:layout_alignStart="@+id/downloadButton"
        android:layout_alignEnd="@+id/downloadButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/currentLabel"
        android:id="@+id/currentText"
        android:layout_below="@+id/latestText"
        android:layout_alignStart="@+id/latestText"
        android:textAlignment="center" />

</RelativeLayout>
